--- a/.github/workflows/citest.yml
+++ b/.github/workflows/citest.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Setup conda and install conda-build
       shell: bash -l {0}
       run: |
-        conda install -n base conda-libmamba-solver=23.12.0
+        conda install -n base conda-libmamba-solver
         conda config --set solver libmamba
         conda config --append channels conda-forge
         conda config --set show_channel_urls true
